--- a/plugins/client/package.json
+++ b/plugins/client/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "core-js": "^2.4.1",
-    "orientjs": "^2.2.7",
+    "node-gyp": "^3.6.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -44,7 +44,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "tslint": "~5.9.1"
   }
 }
